--- a/public/404.html
+++ b/public/404.html
@@ -98,4 +98,40 @@
   .btn-purple-err:hover:before {
     width: 100%;
   }
+
+  @media only screen and (max-width: 500px) {
+
+    .err {
+      font-size: 180px;
+    }
+
+    .description {
+      font-size: 15px;
+      margin-top: -25px;
+      margin-bottom: 30px;
+    }
+
+    .btn-purple-err {
+      font-size: 15px;
+    }
+  }
+
+  @media (min-width: 501px) and (max-width: 768px) {
+    
+    .err {
+      font-size: 180px;
+    }
+
+    .description {
+      font-size: 15px;
+      margin-top: -25px;
+      margin-bottom: 30px;
+    }
+
+    .btn-purple-err {
+      font-size: 15px;
+    }
+  }
+
+
 </style>
